--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -383,13 +383,10 @@
     <string name="pref_screentimeout_mode_summary">Choose screen off modes</string>
     <string name="pref_ring_mode_title">Sound</string>
     <string name="pref_ring_mode_summary">Choose sound button modes</string>
-    <string name="sound_mode_soundVib_vib">Sound+Vibrate/Vibrate</string>
-    <string name="sound_mode_sound_vib">Sound/Vibrate</string>
-    <string name="sound_mode_sound_silent">Sound/Silent</string>
-    <string name="sound_mode_soundVib_vib_silent">Sound+Vib/Vib/Silent</string>
-    <string name="sound_mode_sound_vib_silent">Sound/Vibrate/Silent</string>
-    <string name="sound_mode_soundVib_sound_vib_silent">Sound+Vibrate/Sound/Vibrate/Silent</string>
-    <string name="sound_mode_vib_silent">Vibrate/Silent</string>
+    <string name="sound_mode_silent">Silent</string>
+    <string name="sound_mode_vibrate">Vibrate</string>
+    <string name="sound_mode_sound">Sound</string>
+    <string name="sound_mode_soundVibrate">Sound+Vibrate</string>
     <string name="pref_flash_mode_title">Flashlight</string>
     <string name="pref_flash_mode_summary">Choose high or deathray</string>
     <string name="widget_max_buttons">Max of six widget buttons</string>
