--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -816,6 +816,8 @@
     <string name="sound_alarms_limitvol_dialog">Alarms</string>
     <string name="sound_swap_volume_keys_dialog">Swap Volume Keys</string>
     <string name="sound_swap_volume_keys_title">Swap Volume Keys</string>
+    <string name="sound_volume_key_beeps_title">Volume Key Beeps</string>
+    <string name="sound_volume_key_beeps_summary_on">Beep after changing ringer volume</string>
     <string name="sound_camera_shutter_disable_title">Camera Shutter</string>
     <string name="sound_camera_shutter_disable_summary_on">Shutter sound is enabled</string>
     <string name="sound_camera_shutter_disable_summary_off">Shutter sound is disabled</string>
