--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -532,6 +532,7 @@
        
     <!-- Lockscreen -->
     <string name="lockscreen_title">Lockscreen</string>
+    <string name="lockscreen_options_title">Options</string>
     <string name="lockscreen_summary">Personalize lockscreen</string>
     <string name="pref_lockscreen_disable_on_security_title">Disable</string>
     <string name="pref_lockscreen_disable_on_security_summary">Only when secure</string>
@@ -578,12 +579,12 @@
     <string name="pref_lockscreen_custom_app_toggle_title">Custom App</string>            
     <string name="pref_lockscreen_custom_app_toggle_summary">Slider, dimple, or ring</string>                                                            
     <string name="pref_lockscreen_custom_app_activity_title">Select App</string>
-    <string name="pref_lockscreen_ring_custom_apps_dialog_title_set">Select Shortcut</string>
-    <string name="pref_lockscreen_ring_custom_apps_dialog_title_unset">Unset Shortcut</string>
-    <string name="pref_lockscreen_ring_custom_apps_dialog_cancel">Cancel</string>
-    <string name="pref_lockscreen_ring_custom_apps_dialog_add">Add</string>
-    <string name="pref_lockscreen_ring_custom_apps_dialog_remove">Remove</string>
-    <string name="pref_lockscreen_ring_custom_apps_notset">Not Set</string>
+    <string name="pref_lockscreen_custom_apps_dialog_title_set">Select Shortcut</string>
+    <string name="pref_lockscreen_custom_apps_dialog_title_unset">Unset Shortcut</string>
+    <string name="pref_lockscreen_custom_apps_dialog_cancel">Cancel</string>
+    <string name="pref_lockscreen_custom_apps_dialog_add">Add</string>
+    <string name="pref_lockscreen_custom_apps_dialog_remove">Remove</string>
+    <string name="pref_lockscreen_custom_apps_notset">Not Set</string>
     <string name="pref_lockscreen_ring_unlock_middle_title">Unlock Middle</string>
     <string name="pref_lockscreen_ring_unlock_middle_summary">Switch unlock with launcher</string>
     <string name="pref_lockscreen_ring_minimal_title">Minimal Style</string>
