Missing Dev Title String

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -881,6 +881,7 @@
     <string name="liquidzgrl_summary">Team Liquid graphics guru</string>
     <string name="jbirdvegas_title">JBirdVegas</string>
     <string name="revnumbers_title">RevNumbers</string>
+    <string name="cush2push_title">Cush2Push</string>
     <string name="jrummy16_title">Jrummy16</string>
     <string name="jrummy16_summary">Great friend and amazing apps</string>
     <string name="dev_team_summary">Team Liquid developer</string>
