--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
 
-    <string name="app_name">Church Key</string>
-    <string name="version_name">pre alpha</string>
-    <string name="hello">hello swipe</string>
+    <string name="app_name">Liquid Settings</string>
+    <string name="version_name">ICS v.001</string>
 
 </resources>
