fix build conflicts
TODO AndroidManifest is borked for ParchmentActivity and PropModderActivity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -711,47 +711,70 @@
 
     <!-- PropModder -->
     <string name="propmodder_title">PropModder</string>
-    <string name="propmodder_summary">Modify build prop values</string>
-    <string name="pref_vm_heapsize_title">VM Heapsize</string>
-    <string name="pref_vm_heapsize_summary">Max virtual memory size</string>
-    <string name="pref_lcd_density_title">LCD Density</string>
-    <string name="pref_lcd_density_summary">Change the screen density</string>
-    <string name="pref_max_events_title">Max Events</string>
-    <string name="pref_max_events_summary">Controls max window events</string>
-    <string name="pref_ring_delay_title">Ring Delay</string>
-    <string name="pref_ring_delay_summary">Sets incoming ringer delay</string>
-    <string name="pref_fast_upload_title">Fast Upload</string>
-    <string name="pref_fast_upload_summary">Makes upload speeds faster</string>
-    <string name="pref_prox_delay_title">Proximity Delay</string>
-    <string name="pref_prox_delay_summary">Sensor delay during calls</string>
-    <string name="pref_rem_logcat_title">Remove Logcat</string>
-    <string name="pref_rem_logcat_summaryOn">Enable logcat on boot</string>
-    <string name="pref_rem_logcat_summaryOff">Disable logcat on boot</string>
-    <string name="pref_wifi_interval_title">Wifi Interval</string>
-    <string name="pref_wifi_interval_summary">Time between wifi scans</string>
-    <string name="pref_sleep_title">Sleep Mode</string>
-    <string name="pref_sleep_summary">Modify night sleep policy</string>
-    <string name="pref_tcp_stack_title">TCP Stack</string>
-    <string name="pref_tcp_stack_summary">Optimizes data preformance</string>
-    <string name="pref_check_in_title">Check Service</string>
-    <string name="pref_check_in_summary">Stop sending usage data</string>
-    <string name="pref_sd_speed_title">SDCard Booster</string>
-    <string name="pref_sd_speed_summary">Modify read ahead buffer</string>
-    <string name="pref_3g_speed_title">3G Speed Hack</string>
-    <string name="pref_3g_speed_summary">Uncap data speed limits</string>
+    <string name="propmodder_summary">Automate modifing build.prop</string>
+    <string name="propmodder_main_title_head">PropModder by n00bware</string>
+    <string name="nonprop_cat_title">Mods involving init.d script</string>
+    <string name="credit_title">n00bware</string>
+    <string name="credit_summary">Learn more about the developers</string>
+    <string name="pref_jbirdvegas_title">JBirdVegas</string>
+    <string name="pref_jbirdvegas_summary">Lead Developer</string>
+    <string name="pref_revnumbers_title">RevNumbers</string>
+    <string name="pref_revnumbers_summary">Developer / Linux expert</string>
+    <string name="main_warning_title">YOU HAVE BEEN WARNED</string>
+    <string name="main_warning_summary">This app was conceived while watching monkeys juggling knives.  It hacks your \'/system/build.prop\' WE ARE NOT RESPONSIBLE FOR ACCIDENTAL KNIFE CUTS! Your device your responsibility</string>
+    <string name="pref_wifi_scan_interval_title">Wifi scan interval</string>
+    <string name="pref_wifi_scan_interval_summary">The time between wifi scans when no stored access points are available (requires reboot)</string>
+    <string name="pref_lcd_density_title">LCD density</string>
+    <string name="pref_lcd_density_summary">This is the screen density allowing more high definition look (requires reboot)</string>
+    <string name="pref_max_events_title">Windows Manager\'s max events per second</string>
+    <string name="pref_max_events_summary">This is a runtime value that controls the number of events the system will allow in a second (requires reboot)</string>
+    <string name="pref_usb_mode_title">Default USB mode</string>
+    <string name="pref_usb_mode_summary">This decides what the default setting is when you plug in to a computer via USB (requires reboot)</string>
+    <string name="pref_ring_delay_title">Telephone ringer delay</string>
+    <string name="pref_ring_delay_summary">The amount of time from when the system registers an incoming phone call until the ringer starts (requires reboot)</string>
+    <string name="pref_vm_heapsize_title">Dalvik cache heapsize</string>
+    <string name="pref_vm_heapsize_summary">This controls the size of the cache the Dalvik VM has access to (requires reboot)</string>
+    <string name="propmodder_warning_title">ROOT IS REQUIRED</string>
+    <string name="propmodder_warning">This program changes system properties in /system/build.prop DO NOT USE if you don\'t know what you are doing. We (n00bware, makers of PropModder) are not responsible for your device PERIOD. You have been warned</string>
+    <string name="showbuild_title">Do you know what is in your build.prop</string>
+    <string name="showbuild_dialog">This is your /system/build.prop</string>
+    <string name="showbuild_loading">Loading build.prop\u2026</string>
+    <string name="showbuild_error">Error loading build.prop\u2026</string>
+    <string name="showbuild_unknown">Unknown</string>
+    <string name="showbuild_version">Version</string>
+    <string name="showbuild_label">We should look because knowing is half the battle</string>
+    <string name="pref_fast_up_title">HSUPA upload speed hack</string>
+    <string name="pref_fast_up_summary">*WARNING* if you change this value it will add the needed values to your build.prop if they are not already present (requires reboot)</string>
+    <string name="pref_disable_boot_anim_title">Disable Boot Animation</string>
+    <string name="pref_disable_boot_anim_summary">Disable system boot animation (requires reboot)</string>
+    <string name="pref_prox_delay_title">Proximity sensor delay</string>
+    <string name="pref_prox_delay_summary">When you are in-call screen is off when the device moves away from your face this delay value controls how long before screen turns on (requires reboot)</string>
+    <string name="pref_logcat_title">Disable logcat</string>
+    <string name="pref_logcat_summary">Disabling logcat can improve system speed, but makes debugging very difficult</string>
+    <string name="pref_mod_version_title">Change your Build Number</string>
+    <string name="pref_mod_version_summary">This is astetic and doesn\'t improve the system</string>
+    <string name="pref_mod_version_default">PropModder!!!</string>
+    <string name="pref_sleep_title">PM Sleep mode</string>
+    <string name="pref_sleep_summary">Modify Nighttime sleep policy</string>
+    <string name="pref_jit_title">Just In Time Complier</string>
+    <string name="pref_jit_summary">enables/disables JIT complier in dalvik vm</string>
+    <string name="pref_tcp_stack_title">Optimize TCP Stack</string>
+    <string name="pref_tcp_stack_summary">Modify the buffer-size for better performance</string>
+    <string name="pref_check_in_title">Check in service</string>
+    <string name="pref_check_in_summary">Stop sending system usage data to Google and HTC</string>
+    <string name="pref_sdcard_buffer_title">Sdcard speed hack</string>
+    <string name="pref_sdcard_buffer_summary">Modify the sdcard buffer-size for better performance</string>
+    <string name="pref_g_speed_title">3G Speed Hack</string>
+    <string name="pref_g_speed_summary">Uncap 3g speed</string>
     <string name="pref_gpu_title">GPU Acceleration</string>
-    <string name="pref_gpu_summary">Enable hardware acceleration</string>
-    <string name="propviewer_title">PropViewer</string>
-    <string name="propviewer_summary">Display build prop values</string>
-    <string name="propviewer_dialog">System Prop Values</string>
-    <string name="propviewer_loading">Loading Prop Values\u2026</string>
-    <string name="propviewer_error">Error While Loading\u2026</string>
-    <string name="propviewer_unknown">Unknown</string>
-    <string name="propviewer_version">Version</string>
+    <string name="pref_gpu_summary">To enable hardware acceleration where the GPU controls the UI instead of the CPU</string>
+    <string name="pref_vvmail_title">VVMail (Sense ROMs ONLY)</string>
+    <string name="pref_vvmail_summary">force Sense ROMS compatibility with VVMail</string>
 
     <!-- Parchment -->
     <string name="parchment_title">Parchment</string>
     <string name="parchment_summary">Modify and save text files</string>
+    <string name="parchment_default_title">Parchment by n00bware</string>
     <string name="splash_label">splash_screen</string>
     <string name="cancel">Cancel</string>
     <string name="clear">Clear screen</string>
