revert disabling commit in favor of moving to disabling the entire prefscreen

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -862,6 +862,8 @@
     <!-- droid does -->
     <string name="bootanimation_title">Bootanimations title string</string>
     <string name="bootanimation_summary">Bootanimations summary string</string>
+    <string name="boot_anims_switch_title">Disable boot animations</string>
+    <string name="boot_anims_switch_summary">Faster boot times</string>
     <string name="does_gingy_title">Droid does gingy</string>
     <string name="does_green_title">Droid does green</string>
     <string name="does_light_blue_title">Droid does light blue</string>
