--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -859,6 +859,9 @@
     <string name="summary_nav_hide_search">Show the onscreen search button</string>
 
     <!-- boot animation titles -->
+    <string name="bootanimation_switch_title">Disable boot animations</string>
+    <string name="bootanimation_switch_summary">summary explaination</string>
+
     <!-- droid does -->
     <string name="bootanimation_title">Bootanimations title string</string>
     <string name="bootanimation_summary">Bootanimations summary string</string>
